/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2011 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2015-02-10 Joe                Moved page number, when more than 1 page, on documents down 2 lines.
2015-01-24 Joe                Fixed Delivery note bug : Parent constraints not working if sales order line deleted after delivery
2015-01-17 Joe                Missing update of shipping tax when crediting an invoice.
2014-12-31 Janusz Dobrowolski Fixed error handling (logged in debug instead of production mode).
2014-12-31 Janusz Dobrowolski Purchase order reference was not restored after last PO cancellation.
2014-12-22 Janusz Dobrowolski Reverted redundant indexes in standard CoAs in v2.3 and moved them to v2.4 unstable branch.
2014-12-21 Janusz Dobrowolski Removed redundant indexes in standard CoAs.
2014-12-19 Joe                Extended email entries (Geoffrey Walton).
2014-12-17 Joe                Fixed Quote Valid Days in System and GL Setup, Setup tab.
2014-12-09 Janusz Dobrowolski Fixed problems with latin2 encoding due to changes in htmlspecialchars() behaviour in newer php versions.
2014-11-22 Janusz Dobrowolski Further fixes to javascript multiple class handling. (Incomplete yet works for now. Needs further changes in FAMods)
2014-11-21 Janusz Dobrowolski [0002950] Fixed false quantity on hand errors on sales delivery.
2014-11-21 Janusz Dobrowolski Fixed warning during database restore.
2014-11-21 Janusz Dobrowolski Fixed warning about non-existing HTTP_USER_AGENT session variable on some Plesk configurations.
2014-11-19 Joe                Fixed better CSS combobox select.
2014-11-17 Joe                Fixed ECB URLs moved permanently.
2014-11-14 Janusz Dobrowolski Cambell: Javascript now works with multiple classes on elements.