@@ -91,6 +91,9 @@ function print_po()
 	for ($i = $from; $i <= $to; $i++)
 	{
 		$myrow = get_po($i);
+		if ($currency != ALL_TEXT && $myrow['curr_code'] != $currency) {
+			continue;
+		}
 		$baccount = get_default_bank_account($myrow['curr_code']);
 		$params['bankaccount'] = $baccount['id'];
 
