@@ -108,6 +108,9 @@ function print_remittances()
 			$myrow = get_remittance($j, $i);
 			if (!$myrow)
 				continue;			
+			if ($currency != ALL_TEXT && $myrow['curr_code'] != $currency) {
+				continue;
+			}
 			$res = get_bank_trans($j, $i);
 			$baccount = db_fetch($res);
 			$params['bankaccount'] = $baccount['bank_act'];
